--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VitrageDemo</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <meta charset="utf-8">
+  <%#<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">%>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Vitrage demo</title>
+  <meta name="description" content="Vitrage complex content editing system demo website">
+  <!-- Favicons and touch icons -->
+  <%= favicon_link_tag '/favicon.ico', rel: 'icon', sizes: '16x16 32x32 48x48 64x64' %>
+  <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
+  <link rel="apple-touch-icon" href="/apple_touch_icon.png">
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= yield %>
+  <%= javascript_include_tag 'application' %>
 </body>
 </html>
