--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ * do not require_tree .
+ *= require normalize
+ *= require print
+ *= require screen
  *= require vitrage/vitrage
  *= require_self
  */
