--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
         Vitrage is&nbsp;web-page content management system for&nbsp;Rails, based on&nbsp;separated content pieces.
       </p>
       <p>
-        There&nbsp;is&nbsp;<a href="https://github.com/dymio/vitrage">Github page</a> of&nbsp;the&nbsp;project.
+        There&nbsp;is a&nbsp;<a href="https://github.com/dymio/vitrage">Github page</a> of&nbsp;the&nbsp;project.
       </p>
     </div>
     <div>
