--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,6 @@
  *= require normalize
  *= require print
  *= require screen
- *= require vitrage/vitrage
+ *= require content_blocks
  *= require_self
  */
